@@ -13,6 +13,7 @@ Nagios 3.x Change Log
 * Fixed bug in processing multiple check results contained in a single file
 * Expanded timeperiod definitions to allow for day/date exceptions
 * Changes to sample config files and installation location
+* Changed debug file format to include current pid
 
 
 
